--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -34,17 +34,17 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="21593" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="21593" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <tabbedpane title="Create User"/>
+                      <tabbedpane title="Main Functions"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
                     <children>
                       <scrollpane id="82c0b">
                         <constraints>
-                          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties/>
                         <border type="none"/>
@@ -55,16 +55,6 @@
                           </component>
                         </children>
                       </scrollpane>
-                      <component id="2ccf7" class="javax.swing.JButton" binding="btnGetAllUsers">
-                        <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                            <preferred-size width="386" height="30"/>
-                          </grid>
-                        </constraints>
-                        <properties>
-                          <text value="Get All Users"/>
-                        </properties>
-                      </component>
                       <grid id="87d00" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="5" left="5" bottom="5" right="5"/>
                         <constraints>
@@ -242,6 +232,35 @@
                           </component>
                         </children>
                       </grid>
+                      <component id="6346" class="javax.swing.JButton" binding="btnGetSysInfo">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Get System Info"/>
+                        </properties>
+                      </component>
+                      <component id="2ad3f" class="javax.swing.JTextField" binding="txSystemInfo">
+                        <constraints>
+                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <font size="12"/>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                      <component id="2ccf7" class="javax.swing.JButton" binding="btnGetAllUsers">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="386" height="30"/>
+                          </grid>
+                        </constraints>
+                        <properties>
+                          <text value="Get All Users"/>
+                        </properties>
+                      </component>
                     </children>
                   </grid>
                   <grid id="9fa54" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -1423,6 +1442,14 @@
                 <properties>
                   <font size="12"/>
                   <text value="8890"/>
+                </properties>
+              </component>
+              <component id="515ad" class="javax.swing.JButton" binding="btnUpdateConfig">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Update Configuration"/>
                 </properties>
               </component>
             </children>
