--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -334,7 +334,7 @@
                               <splitpane position="left"/>
                             </constraints>
                             <properties/>
-                            <border type="bevel-raised" title="Access Token" title-justification="2">
+                            <border type="bevel-raised" title="  Access Token  " title-justification="2">
                               <font size="12" style="1"/>
                               <title-color color="-14672672"/>
                             </border>
@@ -424,7 +424,7 @@
                               <splitpane position="right"/>
                             </constraints>
                             <properties/>
-                            <border type="bevel-raised" title="Refresh Token" title-justification="2">
+                            <border type="bevel-raised" title="  Refresh Token  " title-justification="2">
                               <font size="12" style="1"/>
                               <title-color color="-14672672"/>
                             </border>
@@ -458,6 +458,7 @@
                                           <component id="f645f" class="javax.swing.JTextArea" binding="txaTokensRefreshToken">
                                             <constraints/>
                                             <properties>
+                                              <font name="Courier New" size="12" style="0"/>
                                               <lineWrap value="true"/>
                                             </properties>
                                           </component>
@@ -1135,7 +1136,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="5213e" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="5213e" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="5" left="5" bottom="5" right="5"/>
                     <constraints>
                       <tabbedpane title="Front End Simulation"/>
@@ -1154,7 +1155,7 @@
                       </component>
                       <hspacer id="cbf8b">
                         <constraints>
-                          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                       </hspacer>
                       <component id="d6dd9" class="javax.swing.JLabel" binding="lbSysTime">
@@ -1175,7 +1176,7 @@
                       </component>
                       <scrollpane id="fbf16">
                         <constraints>
-                          <grid row="3" column="0" row-span="1" col-span="5" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties/>
                         <border type="none"/>
@@ -1197,7 +1198,7 @@
                       </component>
                       <component id="cbc32" class="javax.swing.JTextField" binding="txFrontEndLastResponse">
                         <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="244" height="26"/>
                           </grid>
                         </constraints>
@@ -1217,7 +1218,7 @@
                       </component>
                       <component id="803ec" class="javax.swing.JTextField" binding="txFrontEndLastSingleResponse">
                         <constraints>
-                          <grid row="2" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                          <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="244" height="26"/>
                           </grid>
                         </constraints>
@@ -1228,7 +1229,7 @@
                       </component>
                       <component id="60333" class="javax.swing.JComboBox" binding="cbFesimRacks">
                         <constraints>
-                          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties/>
                       </component>
@@ -1853,7 +1854,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.0.4.1"/>
+                      <text value="1.0.4.2"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
@@ -1876,7 +1877,7 @@
                     <properties>
                       <editable value="false"/>
                       <font size="12"/>
-                      <text value="2020-11-22"/>
+                      <text value="2020-11-27"/>
                     </properties>
                   </component>
                   <hspacer id="47b19">
