--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -499,6 +499,45 @@
                       </splitpane>
                     </children>
                   </grid>
+                  <grid id="cbccc" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <tabbedpane title="User Profile"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="30921" class="javax.swing.JButton" binding="btnUserProfileGetProfile">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Get Profile"/>
+                        </properties>
+                      </component>
+                      <hspacer id="4cfd3">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
+                      <scrollpane id="b3327">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="af19" class="javax.swing.JTextArea" binding="txaUserProfileUserProfile">
+                            <constraints/>
+                            <properties>
+                              <font name="Courier New" size="12" style="0"/>
+                              <lineWrap value="true"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </scrollpane>
+                    </children>
+                  </grid>
                 </children>
               </tabbedpane>
             </children>
@@ -1879,7 +1918,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.0.4.3"/>
+                      <text value="1.0.4.4"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
@@ -1902,7 +1941,7 @@
                     <properties>
                       <editable value="false"/>
                       <font size="12"/>
-                      <text value="2020-11-27"/>
+                      <text value="2020-12-01"/>
                     </properties>
                   </component>
                   <hspacer id="47b19">
