--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -2387,6 +2387,52 @@
                 <properties/>
                 <border type="none"/>
                 <children>
+                  <grid id="a9788" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <tabbedpane title="Get Data"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="1286b" class="javax.swing.JButton" binding="btnJanusGetSessions">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Get Sessions"/>
+                        </properties>
+                      </component>
+                      <hspacer id="2b57f">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
+                      <scrollpane id="c7a80">
+                        <constraints>
+                          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="ecb02" class="javax.swing.JList" binding="lbJanusMainLog">
+                            <constraints/>
+                            <properties>
+                              <font name="Courier 10 Pitch" size="14"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </scrollpane>
+                      <component id="20466" class="javax.swing.JButton" binding="btnJanusClearMainLog">
+                        <constraints>
+                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Clear Log"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
                   <grid id="989b3" layout-manager="GridLayoutManager" row-count="2" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
@@ -2454,52 +2500,6 @@
                         </constraints>
                         <properties>
                           <text value="janusoverlord"/>
-                        </properties>
-                      </component>
-                    </children>
-                  </grid>
-                  <grid id="a9788" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
-                    <constraints>
-                      <tabbedpane title="Get Data"/>
-                    </constraints>
-                    <properties/>
-                    <border type="none"/>
-                    <children>
-                      <component id="1286b" class="javax.swing.JButton" binding="btnJanusGetSessions">
-                        <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <text value="Get Sessions"/>
-                        </properties>
-                      </component>
-                      <hspacer id="2b57f">
-                        <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                      </hspacer>
-                      <scrollpane id="c7a80">
-                        <constraints>
-                          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties/>
-                        <border type="none"/>
-                        <children>
-                          <component id="ecb02" class="javax.swing.JList" binding="lbJanusMainLog">
-                            <constraints/>
-                            <properties>
-                              <font name="Courier New" size="12"/>
-                            </properties>
-                          </component>
-                        </children>
-                      </scrollpane>
-                      <component id="20466" class="javax.swing.JButton" binding="btnJanusClearMainLog">
-                        <constraints>
-                          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties>
-                          <text value="Clear Log"/>
                         </properties>
                       </component>
                     </children>
