Janus operations continued

--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -1991,7 +1991,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="a9788" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="a9788" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <tabbedpane title="Get Data"/>
@@ -2009,12 +2009,12 @@
                       </component>
                       <hspacer id="2b57f">
                         <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
                       </hspacer>
                       <scrollpane id="c7a80">
                         <constraints>
-                          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties/>
                         <border type="none"/>
@@ -2033,6 +2033,15 @@
                         </constraints>
                         <properties>
                           <text value="Clear Log"/>
+                        </properties>
+                      </component>
+                      <component id="5c719" class="javax.swing.JCheckBox" binding="chkJanusRemoveMainLog">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <selected value="true"/>
+                          <text value="Clear Log Before Query"/>
                         </properties>
                       </component>
                     </children>
@@ -2104,6 +2113,14 @@
                         </constraints>
                         <properties>
                           <text value="janusoverlord"/>
+                        </properties>
+                      </component>
+                      <component id="6fdcf" class="javax.swing.JButton" binding="btnJanusSaveLog">
+                        <constraints>
+                          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="Save Log"/>
                         </properties>
                       </component>
                     </children>
